// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`B2 when asked to render  matches snapshot 1`] = `
<p
  className="text-lg "
>
  Hello world!
</p>
`;

exports[`B2 when asked to render with additional class  matches snapshot 1`] = `
<p
  className="text-lg  some-class"
>
  Hello world!
</p>
`;
